...
enum LegalDoc: String {
    case privacy = "privacy-policy"
    case terms = "terms-of-service"
    
    var title: String {
        switch self {
        case .privacy: return "Política de Privacidad"
        case .terms: return "Términos de Servicio"
        }
    }
}

struct LegalView: UIViewRepresentable {
    let file: LegalDoc
...
